- 2003-02-07 	leo
	* version 0.0.9.12
	* changed -d (--debug) options and made more granular
	  debug output. s. docs/running.pod

- 2003-01-31 	leo
	* version 0.0.9.11
	* changed the until now global Parrot_Interp * to
	  a local one
	  This implies:
	  *****************************************************
	  CHANGES in many function prototypes, which now take a
	  interpreter param
	  *****************************************************

- 2003-01-20	leo
	* version 0.0.9.10
	* the -r command line option is now optional, default mode now
	  is running the program, except when a -o output is given
	* the -c option now means: assume PBC on stdin and run it.
	* imcc_compile
	* generate file/line info for programs and compile ops

- 2003-01-14	leo

	* version 0.0.9.9.
	* fix const integer multi keys
	* recognize op_fullnames
	* allow reserved word (i.e. parrot ops) as labels

- 2002-12-12	leo

	* version 0.0.9.8
	* .const directive
	* identifier and const scope

- 2002-12-09	leo

	* version 0.0.9.7
	* docs/*.pod
	* nested subs
	* _global label
	* imcpasm tests

- 2002-12-07	leo

	* version 0.0.9.6
	* split imcc.y -> main.c parser_util.c
	* INS takes now an additional param "emit"
	* make namespace running

- 2002-12-xx

	* added t/harness stuff

	* SYNTAX change:

	.sub / ret => .sub / .end

- 2002-09-15	leo

	* fixed GC bug, BUFFER_constant_FLAG!
	  imcc runs now all perl6 tests like parrot

- 2002-09-12	leo

	* pbc.c / packout.c / perl6

	  Write .pbc files.

	* imcc.y / imcc.l

	  Allow mixed usage of $I0, I0, and _Lexicals

	* imcc.y / symreg.[ch] / instruction.c / imc.c

	  Implement key structures P["key"; 0; $I42 ]

- 2002-09-11	leo

	* removed anyop.c/h. If we need more then one lib
	  the core should provide this functionality.

	* parrot core
	  proposed changes WRT op_lib, op_code() lookup,
	  and core_ops organization including patches
	  for prederefencing (ok now).

- 2002-09-10	leo

	Bigger changes to allow running PBC inside imcc,